@@ -341,7 +341,7 @@ namespace WebKit {
 namespace Messages {
 namespace WebPage {
 
-static inline const char const* messageReceiverName()
+static inline const char* messageReceiverName()
 {
     return "WebPage";
 }
@@ -379,8 +379,8 @@ enum Kind {
 
 struct LoadURL : CoreIPC::Arguments1<const WTF::String&> {
     static const Kind messageID = LoadURLID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "LoadURL"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "LoadURL"; }
 
     typedef CoreIPC::Arguments1<const WTF::String&> DecodeType;
     explicit LoadURL(const WTF::String& url)
@@ -392,8 +392,8 @@ struct LoadURL : CoreIPC::Arguments1<const WTF::String&> {
 #if ENABLE(TOUCH_EVENTS)
 struct TouchEvent : CoreIPC::Arguments1<const WebKit::WebTouchEvent&> {
     static const Kind messageID = TouchEventID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "TouchEvent"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "TouchEvent"; }
 
     typedef CoreIPC::Arguments1<const WebKit::WebTouchEvent&> DecodeType;
     explicit TouchEvent(const WebKit::WebTouchEvent& event)
@@ -405,8 +405,8 @@ struct TouchEvent : CoreIPC::Arguments1<const WebKit::WebTouchEvent&> {
 
 struct DidReceivePolicyDecision : CoreIPC::Arguments3<uint64_t, uint64_t, uint32_t> {
     static const Kind messageID = DidReceivePolicyDecisionID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "DidReceivePolicyDecision"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "DidReceivePolicyDecision"; }
 
     typedef CoreIPC::Arguments3<uint64_t, uint64_t, uint32_t> DecodeType;
     DidReceivePolicyDecision(uint64_t frameID, uint64_t listenerID, uint32_t policyAction)
@@ -417,16 +417,16 @@ struct DidReceivePolicyDecision : CoreIPC::Arguments3<uint64_t, uint64_t, uint32
 
 struct Close : CoreIPC::Arguments0 {
     static const Kind messageID = CloseID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "Close"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "Close"; }
 
     typedef CoreIPC::Arguments0 DecodeType;
 };
 
 struct PreferencesDidChange : CoreIPC::Arguments1<const WebKit::WebPreferencesStore&> {
     static const Kind messageID = PreferencesDidChangeID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "PreferencesDidChange"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "PreferencesDidChange"; }
 
     typedef CoreIPC::Arguments1<const WebKit::WebPreferencesStore&> DecodeType;
     explicit PreferencesDidChange(const WebKit::WebPreferencesStore& store)
@@ -437,8 +437,8 @@ struct PreferencesDidChange : CoreIPC::Arguments1<const WebKit::WebPreferencesSt
 
 struct SendDoubleAndFloat : CoreIPC::Arguments2<double, float> {
     static const Kind messageID = SendDoubleAndFloatID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "SendDoubleAndFloat"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "SendDoubleAndFloat"; }
 
     typedef CoreIPC::Arguments2<double, float> DecodeType;
     SendDoubleAndFloat(double d, float f)
@@ -449,8 +449,8 @@ struct SendDoubleAndFloat : CoreIPC::Arguments2<double, float> {
 
 struct SendInts : CoreIPC::Arguments2<const Vector<uint64_t>&, const Vector<Vector<uint64_t> >&> {
     static const Kind messageID = SendIntsID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "SendInts"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "SendInts"; }
 
     typedef CoreIPC::Arguments2<const Vector<uint64_t>&, const Vector<Vector<uint64_t> >&> DecodeType;
     SendInts(const Vector<uint64_t>& ints, const Vector<Vector<uint64_t> >& intVectors)
@@ -461,8 +461,8 @@ struct SendInts : CoreIPC::Arguments2<const Vector<uint64_t>&, const Vector<Vect
 
 struct CreatePlugin : CoreIPC::Arguments2<uint64_t, const WebKit::Plugin::Parameters&> {
     static const Kind messageID = CreatePluginID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "CreatePlugin"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "CreatePlugin"; }
 
     typedef CoreIPC::Arguments1<bool&> Reply;
     typedef CoreIPC::Arguments2<uint64_t, const WebKit::Plugin::Parameters&> DecodeType;
@@ -474,8 +474,8 @@ struct CreatePlugin : CoreIPC::Arguments2<uint64_t, const WebKit::Plugin::Parame
 
 struct RunJavaScriptAlert : CoreIPC::Arguments2<uint64_t, const WTF::String&> {
     static const Kind messageID = RunJavaScriptAlertID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "RunJavaScriptAlert"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "RunJavaScriptAlert"; }
 
     typedef CoreIPC::Arguments0 Reply;
     typedef CoreIPC::Arguments2<uint64_t, const WTF::String&> DecodeType;
@@ -487,8 +487,8 @@ struct RunJavaScriptAlert : CoreIPC::Arguments2<uint64_t, const WTF::String&> {
 
 struct GetPlugins : CoreIPC::Arguments1<bool> {
     static const Kind messageID = GetPluginsID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "GetPlugins"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "GetPlugins"; }
 
     typedef CoreIPC::Arguments1<Vector<WebCore::PluginInfo>&> Reply;
     typedef CoreIPC::Arguments1<bool> DecodeType;
@@ -500,8 +500,8 @@ struct GetPlugins : CoreIPC::Arguments1<bool> {
 
 struct GetPluginProcessConnection : CoreIPC::Arguments1<const WTF::String&> {
     static const Kind messageID = GetPluginProcessConnectionID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "GetPluginProcessConnection"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "GetPluginProcessConnection"; }
 
     struct DelayedReply : public ThreadSafeRefCounted<DelayedReply> {
         DelayedReply(PassRefPtr<CoreIPC::Connection>, PassOwnPtr<CoreIPC::ArgumentEncoder>);
@@ -524,8 +524,8 @@ struct GetPluginProcessConnection : CoreIPC::Arguments1<const WTF::String&> {
 
 struct TestMultipleAttributes : CoreIPC::Arguments0 {
     static const Kind messageID = TestMultipleAttributesID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "TestMultipleAttributes"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "TestMultipleAttributes"; }
 
     struct DelayedReply : public ThreadSafeRefCounted<DelayedReply> {
         DelayedReply(PassRefPtr<CoreIPC::Connection>, PassOwnPtr<CoreIPC::ArgumentEncoder>);
@@ -544,8 +544,8 @@ struct TestMultipleAttributes : CoreIPC::Arguments0 {
 
 struct TestConnectionQueue : CoreIPC::Arguments1<uint64_t> {
     static const Kind messageID = TestConnectionQueueID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "TestConnectionQueue"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "TestConnectionQueue"; }
 
     typedef CoreIPC::Arguments1<uint64_t> DecodeType;
     explicit TestConnectionQueue(uint64_t pluginID)
@@ -556,8 +556,8 @@ struct TestConnectionQueue : CoreIPC::Arguments1<uint64_t> {
 
 struct TestParameterAttributes : CoreIPC::Arguments3<uint64_t, double, double> {
     static const Kind messageID = TestParameterAttributesID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "TestParameterAttributes"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "TestParameterAttributes"; }
 
     typedef CoreIPC::Arguments3<uint64_t, double, double> DecodeType;
     TestParameterAttributes(uint64_t foo, double bar, double baz)
@@ -569,8 +569,8 @@ struct TestParameterAttributes : CoreIPC::Arguments3<uint64_t, double, double> {
 #if PLATFORM(MAC)
 struct DidCreateWebProcessConnection : CoreIPC::Arguments1<const CoreIPC::MachPort&> {
     static const Kind messageID = DidCreateWebProcessConnectionID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "DidCreateWebProcessConnection"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "DidCreateWebProcessConnection"; }
 
     typedef CoreIPC::Arguments1<const CoreIPC::MachPort&> DecodeType;
     explicit DidCreateWebProcessConnection(const CoreIPC::MachPort& connectionIdentifier)
@@ -583,8 +583,8 @@ struct DidCreateWebProcessConnection : CoreIPC::Arguments1<const CoreIPC::MachPo
 #if PLATFORM(MAC)
 struct InterpretKeyEvent : CoreIPC::Arguments1<uint32_t> {
     static const Kind messageID = InterpretKeyEventID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "InterpretKeyEvent"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "InterpretKeyEvent"; }
 
     typedef CoreIPC::Arguments1<Vector<WebCore::KeypressCommand>&> Reply;
     typedef CoreIPC::Arguments1<uint32_t> DecodeType;
@@ -598,8 +598,8 @@ struct InterpretKeyEvent : CoreIPC::Arguments1<uint32_t> {
 #if ENABLE(DEPRECATED_FEATURE)
 struct DeprecatedOperation : CoreIPC::Arguments1<const CoreIPC::DummyType&> {
     static const Kind messageID = DeprecatedOperationID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "DeprecatedOperation"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "DeprecatedOperation"; }
 
     typedef CoreIPC::Arguments1<const CoreIPC::DummyType&> DecodeType;
     explicit DeprecatedOperation(const CoreIPC::DummyType& dummy)
@@ -612,8 +612,8 @@ struct DeprecatedOperation : CoreIPC::Arguments1<const CoreIPC::DummyType&> {
 #if ENABLE(EXPERIMENTAL_FEATURE)
 struct ExperimentalOperation : CoreIPC::Arguments1<const CoreIPC::DummyType&> {
     static const Kind messageID = ExperimentalOperationID;
-    static const char const* receiverName() { return messageReceiverName(); }
-    static const char const* name() { return "ExperimentalOperation"; }
+    static const char* receiverName() { return messageReceiverName(); }
+    static const char* name() { return "ExperimentalOperation"; }
 
     typedef CoreIPC::Arguments1<const CoreIPC::DummyType&> DecodeType;
     explicit ExperimentalOperation(const CoreIPC::DummyType& dummy)
